# project5

./: .flake8  README.md  pyproject.toml
src/: masks.py  proccesing.py  widget.py
tests/: conftest.py  test_masks.py  test_proccesing.py  test_widget.py
