[project]
name = "homework"
version = "0.1.0"
description = "''"
authors = [
    {name = "Maksim Nikonorov [maximnikonorov957@gmail.com]"}
]
license = {text = "None"}
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^6.0.0"
black = "^25.1.0"


[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.black]
line-length = 120
target-version = ['py38']  # Укажите версии Python, которые поддерживает ваш проект.
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"  # Рекомендуется использовать профиль black для согласованности.
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120 # Должно соответствовать line-length в Black